# EPL-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup-project.py
notebooks/: 01_pipeline_historical.ipynb
scripts/: build_calibration_data.py  build_closing_data.py  build_ml_dataset.py  inspect_data.py  run_closing_backtest.py  run_ml_logreg.py
src/betproj/: backtest.py  calibration.py  cli.py  data_loader.py  diagnostics.py  features.py  features_closing.py  ml_dataset.py  preprocess_closing.py
src/plbias/: config.py
