[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "BeatTheBookies"
version = "0.1.0"
description = "Odds-based value betting + ML bet selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14.0",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "ipykernel>=6.29"
]
app = ["streamlit>=1.34"]

[project.scripts]
BeatTheBookies = "betproj.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/betproj"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
